--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@
                   <div class="banner_main_text">
                      
                      <div class="titlepage">
-                        <h2>SEKOLAH TINGGI ILMU EKONOMI INDOSESIA</h2>
-              <div class="line-dec"></div>
-              <p>STIE "INDONESIA" Pontianak<p>
-              </p> <strong></strong> SELAMA PANDEMI,PENERIMAAN MAHASISWA BARU T.A 2022/2023 DIADAKAN SECARA ONLINE/OFFLINE DENGAN MENERAPKAN PROTOKOL KESEHATAN 
-              <p></p>PERKULIAHAN SEMESTER GANJIL AKADEMIK 2022/2023 MULAI PADA SENIN,TANGGAL 12 SEPTEMBER 2022.<p></p>
-              <br><br> <a rel="nofollow" href="https://www.facebook.com/stiepontianak163/"></a>  <a rel="nofollow" href="http://www.stieip.ac.id/">resmi website stie pontianak</a>.</p>
-              <div class="main-button">
-                <a href="#">PENDAFTARAN!</a>
-              </div>
+                        <h2>SEMINAR TENTANG <br> GENERASI MUDA BERKUALITAS <br> KAMIS, 16 DESEMBER 2021 <br>DI STIE INDONESIA </h2>
+                        <p>sehubungan dengan adanya acara seminar saya mengundang saudara saudari untuk hadir dalam acara seminar ini. acara akan dilaksanakan pada kamis, 10 september 2022 pukil 19.00 wib-selesai pembawa acara: syarif muhammad wemvi (19404145)   </p>
+                        <p>STIE "INDONESIA" Pontianak<p>
+
+                        </p> <strong></strong> SELAMA PANDEMI,PENERIMAAN MAHASISWA BARU T.A 2022/2023 DIADAKAN SECARA ONLINE/OFFLINE DENGAN MENERAPKAN PROTOKOL KESEHATAN 
+                        <p></p>PERKULIAHAN SEMESTER GANJIL AKADEMIK 2022/2023 MULAI PADA SENIN,TANGGAL 12 SEPTEMBER 2022.<p></p>
+                        <br><br> <a rel="nofollow" href="https://www.facebook.com/stiepontianak163/"></a>  <a rel="nofollow" href="http://www.stieip.ac.id/">resmi website stie pontianak</a>.</p>
+                        <div class="main-button">
+                          <a href="#">PENDAFTARAN!</a>
+                        </div>
+                               </div>
                      </div>
                   </div>
                </div>
